# ObjectDetector

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: classes.txt  classes_with_id.txt
detector/: detector.cpp
include/: detection.h  detector.hpp  nms_and_iou.h
main/: main.cpp
src/: detection.cpp  detector.cpp  nms_and_iou.cpp
